--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "axios": "^0.18.0",
     "babel-cli": "^6.26.0",
     "express": "^4.16.3",
+    "file-loader": "^2.0.0",
     "nodemon": "^1.17.5",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "url-loader": "^1.1.1",
     "webpack": "^4.8.3"
   },
   "devDependencies": {
