--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "nodemon": "^1.17.5",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "styled-components": "^3.4.5",
     "url-loader": "^1.1.1",
     "webpack": "^4.8.3"
   },
